--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-json-view": "^1.19.1",
     "react-paginate": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
