--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "autosuggest-highlight": "^3.1.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.1",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.1",
     "react-json-view": "^1.19.1",
     "react-paginate": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "react-select": "^2.4.0"
+    "react-select": "^2.4.0",
+    "react-themeable": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
