--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "react-select": "^2.4.0",
     "react-themeable": "^1.1.0"
   },
+  "devDependencies": {
+    "eslint-config-prettier": "4.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "prettier": "1.16.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
