--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.1",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.1",
+    "react-dropzone": "^10.0.0",
     "react-json-view": "^1.19.1",
     "react-paginate": "^6.2.1",
     "react-router-dom": "^4.3.1",
